# c-programs

nerd-calc/: CMakeLists.txt  Makefile  README.md  build.sh
nerd-calc/src/: calc.c  calc.h  main.c  util.c  util.h
showmeqna/: .clang-format  CMakeLists.txt  Makefile
showmeqna/src/: main.c
verfetch/: CMakeLists.txt  Makefile
verfetch/src/: main.c
